# OreMind

./: .gitignore  DATA_NOTES.md  README.md  pyproject.toml  requirements.txt
api/: main.py
common/: schema.py
data/raw/: news_20260709_133325.json  policy_20260709_150516.json  policy_20260709_173713.json  price_20260709_160244.json
eval/: ground_truth.json  run.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts  style.css
frontend/src/components/: ChatView.vue  MarkdownView.vue  SourceBubble.vue
frontend/src/config/: api.ts
frontend/src/stores/: chat.ts
pipeline/: pipeline.py
pipeline/chunkers/: __init__.py  news_chunker.py  policy_chunker.py  price_chunker.py
pipeline/cleaners/: __init__.py  normalize.py
pipeline/collectors/: base.py  news.py  policy.py  price.py  run.py
pipeline/config/: feeds.py  settings.py
pipeline/dedup/: __init__.py
pipeline/embedding/: __init__.py  index.py
pipeline/rag/: __init__.py
pipeline/retriever/: __init__.py  bm25.py  intent.py  query_transform.py  reranker.py
pipeline/vectordb/: __init__.py
serve/: main.py  router.py  service.py
test/: test_news.py  test_policy.py  test_price.py
